--- a/scheduler/src/main/resources/templates/general.html
+++ b/scheduler/src/main/resources/templates/general.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" id="rootLink" href="/">На главную</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="peopleListLink" th:href="@{teachers}">Преподаватели</a>
+                <a class="nav-link" id="teachersListLink" th:href="@{teachers}">Преподаватели</a>
             </li>
         </ul>
     </div>
