--- a/scheduler/src/main/resources/templates/courses.html
+++ b/scheduler/src/main/resources/templates/courses.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <title>Преподаватели</title>
+    <title>Курсы</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -17,29 +17,29 @@
 <div th:replace="general :: page-header"> </div>
 
 <div class="indent">
-    <form method="get" action="/editTeacher">
-        <button id="addTeacherButton" type="submit" class="btn btn-primary">Добавить преподавателя</button>
+    <form method="get" action="/editCourse">
+        <button id="addCourseButton" type="submit" class="btn btn-primary">Добавить курс</button>
     </form>
     <br>
     <table class="table table-bordered table-warning">
         <thead class="thead-dark">
         <tr>
-            <th scope="col"> Полное имя</th>
-            <th scope="col"> Почта</th>
+            <th scope="col">  Название курса</th>
+            <th scope="col">  Тип курса</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:if="${teachers.isEmpty()}">
-            <td colspan="6"> В базе пока нет ни одного преподавателя. <a href="/editTeacher">Добавить?</a></td>
+        <tr th:if="${courses.isEmpty()}">
+            <td colspan="6"> В базе отсутствует информация о курсах. <a href="/editCourse">Добавить?</a></td>
         </tr>
-        <tr th:each="teacher : ${teachers}">
+        <tr th:each="course : ${courses}">
             <td>
-                <a th:href="'/teacher?teacherId=' + ${teacher.getId()}">
-                    <span th:text="${teacher.getName()}"> </span>
+                <a th:href="'/course?courseId=' + ${course.getId()}">
+                    <span th:text="${course.getName()}"> </span>
                 </a>
             </td>
             <td>
-                <span th:text="${teacher.getMail()}"> </span>
+                <span th:text="${course.getType()}"> </span>
             </td>
         </tr>
 
