--- a/scheduler/src/main/resources/templates/general.html
+++ b/scheduler/src/main/resources/templates/general.html
@@ -27,7 +27,16 @@
                 <a class="nav-link" id="rootLink" href="/">На главную</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" id="coursesListLink" th:href="@{courses}">Курсы</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" id="teachersListLink" th:href="@{teachers}">Преподаватели</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="studentsListLink" th:href="@{studetns}">Студенты</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="auditoriumsListLink" th:href="@{auditoriums}">Аудитории</a>
             </li>
         </ul>
     </div>
@@ -42,6 +51,46 @@
         Иванова Анастасия, 2024
         <br>
     </p>
+</div>
+
+<div class="indent">
+    <form method="get" action="/editSchedule">
+        <button id="addScheduleButton" type="submit" class="btn btn-primary">Добавить ячейку расписания</button>
+    </form>
+    <br>
+    <table class="table table-bordered table-warning">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col"> День недели</th>
+            <th scope="col"> Время </th>
+            <th scope="col"> Курс</th>
+            <th scope="col"> Преподаватель</th>
+            <th scope="col"> Аудитория</th>
+            <th scope="col"> Группа</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:if="${schedules.isEmpty()}">
+            <td colspan="6"> Нет расписания на сегодня. <a href="/editSchedule">Добавить?</a></td>
+        </tr>
+        <tr th:each="schedule : ${schedules}">
+            <td>
+                <a th:href="'/schedule?scheduleId=' + ${schedule.getId()}">
+                    <span th:text="${schedule.getWeekday()}"> </span>
+                </a>
+            </td>
+            <td>
+                <span th:text="${schedule.getTime()}"> </span>
+            </td>
+            <td>
+                <span th:text="${schedule.getAuditorium_id()}"> </span>
+            </td>
+            <td>
+                <span th:text="${schedule.getTime()}"> </span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <!--for bootstrap-->
