--- a/scheduler/src/main/resources/templates/index.html
+++ b/scheduler/src/main/resources/templates/index.html
@@ -11,6 +11,123 @@
             margin-right: 30px;
             margin-top: 20px;
         }
+        .cf:before,
+        .cf:after {
+            content: " ";
+            display: table;
+        }
+
+        .cf:after {
+            clear: both;
+        }
+
+        .cf {
+            *zoom: 1;
+        }
+
+        * {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+
+        body {
+            background-color: rgba(156, 213, 225, 0.76);
+            margin: 0 auto;
+            font-size: 14px;
+            font-family: sans-serif;
+            line-height: 1.4;
+            color: #333;
+        }
+
+        header {
+            padding: 1em;
+            overflow: hidden;
+            background-color: rgba(69, 154, 173, 0.76);
+        }
+
+        footer {
+            text-align: center;
+            color: #666;
+            text-shadow: 0 1px 0 #ddd;
+        }
+
+        a,
+        a:visited {
+            font-weight: 700;
+            text-decoration: none;
+        }
+
+        h1 {
+            float: left;
+            margin: 0;
+            font-size: 1em;
+        }
+
+        h2 {
+            color: #fff;
+            margin-bottom: 0;
+        }
+
+        .col,
+        .form-group {
+            padding: 0 10px;
+        }
+
+        .form-group {
+            float: left;
+        }
+
+        textarea {
+            width: 100%;
+            height: 600px;
+            margin: 0;
+            padding: .5em;
+            overflow: auto;
+            border: none;
+            background-color: #fff;
+            font-family: courier, monospace;
+            font-size: inherit;
+            color: inherit;
+        }
+
+        #input {
+            background: #333;
+            color: #fff;
+        }
+
+        .toolbar {
+            padding-top: 5px;
+            padding-bottom: 5px;
+            background-color: #e6e6e6;
+        }
+
+        select {
+            display: block;
+            width: 100%;
+            font-size: 14px;
+        }
+
+        @media (min-width: 768px) {
+            body {
+                font-size: 16px;
+            }
+
+            .col {
+                float: left;
+                width: 50%;
+                padding: 0 15px;
+            }
+
+            .row {
+                padding-right: 15px;
+                padding-left: 15px;
+            }
+        }
+
+        .form-group label {
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
