--- a/scheduler/src/main/resources/templates/general.html
+++ b/scheduler/src/main/resources/templates/general.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" id="teachersListLink" th:href="@{teachers}">Преподаватели</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="studentsListLink" th:href="@{studetns}">Студенты</a>
+                <a class="nav-link" id="studentsListLink" th:href="@{students}">Студенты</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="auditoriumsListLink" th:href="@{auditoriums}">Аудитории</a>
@@ -44,19 +44,7 @@
 <!--end of page header-->
 
 
-<div th:fragment="site-footer" class="fixed-bottom indent">
-    <p>
-        Расписание для студентов и сотрудников факультета Вычислительной математики и Кибернетики
-        <br>
-        Иванова Анастасия, 2024
-        <br>
-    </p>
-</div>
-
 <div class="indent">
-    <form method="get" action="/editSchedule">
-        <button id="addScheduleButton" type="submit" class="btn btn-primary">Добавить ячейку расписания</button>
-    </form>
     <br>
     <table class="table table-bordered table-warning">
         <thead class="thead-dark">
@@ -76,21 +64,50 @@
         <tr th:each="schedule : ${schedules}">
             <td>
                 <a th:href="'/schedule?scheduleId=' + ${schedule.getId()}">
-                    <span th:text="${schedule.getWeekday()}"> </span>
+                    <span th:text="${schedule.getId()}"> </span>
                 </a>
             </td>
             <td>
+                <span th:text="${schedule.getWeekday()}"> </span>
+            </td>
+            <td>
                 <span th:text="${schedule.getTime()}"> </span>
+            </td>
+            <td>
+                <a th:href="'/course?courseId=' + ${schedule.getTc_id.course}">
+                    <span th:text="${schedule.getTc_id.course}"> </span>
+                </a>
+            </td>
+            <td>
+                <span th:text="${schedule.getTc_id()}"> </span>
+            </td>
+            <td>
+                <a th:href="'/auditorium?auditoriumId=' + ${schedule.getAuditorium_id()}">
+                    <span th:text="${schedule.getAuditorium_id()}"> </span>
+                </a>
             </td>
             <td>
                 <span th:text="${schedule.getAuditorium_id()}"> </span>
             </td>
             <td>
-                <span th:text="${schedule.getTime()}"> </span>
+                <span th:text="${schedule.getSh_group()}"> </span>
             </td>
         </tr>
         </tbody>
+
+        <form method="get" action="/editSchedule">
+            <button id="addScheduleButton" type="submit" class="btn btn-primary">Добавить ячейку расписания</button>
+        </form>
     </table>
+</div>
+
+<div th:fragment="site-footer" class="fixed-bottom indent">
+    <p>
+        Расписание для студентов и сотрудников факультета Вычислительной математики и Кибернетики
+        <br>
+        Иванова Анастасия, 2024
+        <br>
+    </p>
 </div>
 
 <!--for bootstrap-->
