Still work in progress.

--- a/scheduler/src/main/resources/templates/error.html
+++ b/scheduler/src/main/resources/templates/error.html
@@ -18,6 +18,7 @@
 
 <h1>Произошла ошибка.</h1>
 <p>Запрашиваемый ресурс недоступен или невозможно выполнить необходимый запрос.</p>
+<p th:text="${error_msg}"></p>
 
 <div th:replace="general :: site-footer"></div>
 <div th:replace="general :: site-script"></div>
