--- a/scheduler/src/main/resources/templates/editSchedule.html
+++ b/scheduler/src/main/resources/templates/editSchedule.html
@@ -14,38 +14,43 @@
     <title>Редактирование расписания</title>
 </head>
 <body>
+<div th:replace="general :: page-header"></div>
+
 
 <div class="indent">
     <form method="post" action="/saveSchedule">
-        <input type="hidden" name="scheduleId" th:value="${schedule.id}" />
+        <input type="hidden" name="scheduleId" th:value="${schedule.id}" required/>
 
         <div class="form-group">
             <label for="weekday">День недели</label>
-            <input type="text" class="form-control" id="weekday" name="weekday" th:value="${schedule.weekday}" required>
+            <input type="text" class="form-control" id="weekday" name="weekday" th:value="${schedule.weekday}"/>
         </div>
         <div class="form-group">
             <label for="time">Время</label>
-            <input type="text" class="form-control" id="time" name="time" th:value="${schedule.time}" required>
+            <input type="text" class="form-control" id="time" name="time" th:value="${schedule.time}"/>
         </div>
         <div class="form-group">
             <label for="teacherId">ID преподавателя</label>
-            <input type="number" class="form-control" id="teacherId" name="teacherId" th:value="${schedule.tc_id.teacher.id}" required>
+            <input type="number" class="form-control" id="teacherId" name="teacherId" th:value="${schedule.tc_id.teacher.id}" />
         </div>
         <div class="form-group">
             <label for="courseId">ID курса</label>
-            <input type="number" class="form-control" id="courseId" name="courseId" th:value="${schedule.tc_id.course.id}" required>
+            <input type="number" class="form-control" id="courseId" name="courseId" th:value="${schedule.tc_id.course.id}" />
         </div>
         <div class="form-group">
             <label for="auditoriumId">ID аудитории</label>
-            <input type="number" class="form-control" id="auditoriumId" name="auditoriumId" th:value="${schedule.auditorium_id.id}" required>
+            <input type="number" class="form-control" id="auditoriumId" name="auditoriumId" th:value="${schedule.auditorium_id.id}" />
         </div>
         <div class="form-group">
             <label for="group">Группа</label>
-            <input type="text" class="form-control" id="group" name="group" th:value="${schedule.sh_group}" required>
+            <input type="text" class="form-control" id="group" name="group" th:value="${schedule.sh_group}"/>
         </div>
         <button type="submit" class="btn btn-primary">Сохранить</button>
     </form>
 </div>
+
+<div th:replace="general :: site-footer"></div>
+<div th:replace="general :: site-script"></div>
 
 </body>
 </html>
