--- a/scheduler/src/main/resources/templates/editStudent.html
+++ b/scheduler/src/main/resources/templates/editStudent.html
@@ -18,7 +18,7 @@
 <div th:replace="general :: page-header"></div>
 
 <div class="indent">
-    <form method="post" action="/saveStudent">
+    <form method="post" th:action="@{saveStudent}">
         <input type="hidden" name="studentId" th:value="${student.id}"/>
         <div class="form-group">
             <label for="name">Имя</label>
