--- a/scheduler/src/main/resources/templates/students.html
+++ b/scheduler/src/main/resources/templates/students.html
@@ -47,6 +47,7 @@
     </table>
 </div>
 
+<div th:replace="general :: site-footer"></div>
 <div th:replace="general :: site-script"></div>
 
 </body> 
