--- a/scheduler/src/main/resources/templates/general.html
+++ b/scheduler/src/main/resources/templates/general.html
@@ -46,10 +46,10 @@
 
 <div th:fragment="site-footer" class="fixed-bottom indent">
     <p>
-        Расписание для студентов и сотрудников факультета Вычислительной математики и Кибернетики
-        <br>
-        Иванова Анастасия, 2024
-        <br>
+<!--        Расписание для студентов и сотрудников факультета Вычислительной математики и Кибернетики-->
+<!--        <br>-->
+<!--        Иванова Анастасия, 2024-->
+<!--        <br>-->
     </p>
 </div>
 
